# netology-cpp

./: README.md
1.xx/: README.md  Игра Жизнь.cpp
1.xx/1.03/: Гороскоп.cpp  Сравнить числа.cpp  Таблица истинности.cpp  Упорядочить числа.cpp
1.xx/1.04/: Сумма цифр числа.cpp  Сумматор.cpp  Таблица умножения для числа.cpp
1.xx/1.05/: Вывод массива на экран и Максимум и минимум.cpp  Двумерный массив.cpp  Обратный Bubble Sort.cpp  Пузырьковая сортировка.cpp
1.xx/1.06/: Арифметические функции.cpp  Устранение дублей.cpp  Числа Фибоначчи.cpp
1.xx/1.07/: Адреса переменных.cpp  Обмен значениями (swap).cpp
1.xx/1.08/: Одинаковые, но разные функции.cpp  Считающая функция.cpp
1.xx/1.09/: Вывод массива.cpp  Переворот массива.cpp  Снова swap.cpp
1.xx/1.10/: Ввод массива с консоли.cpp  Динамическая таблица умножения.cpp  Создатель массивов.cpp
1.xx/1.11/: Приветствие.cpp  Угадайка (Авторское решение).cpp  Угадайка.cpp
1.xx/1.12/: Вывод файла.cpp  Пользовательский массив в файл.cpp  Считывание двумерного массива из файла.cpp  Чтение массива из файла.cpp
2.xx/: README.md
2.xx/02/: Вывод структуры.cpp  Месяцы.cpp  Счета.cpp
2.xx/03/: Калькулятор двух чисел.cpp  Счётчик.cpp
2.xx/10/Class_hierarchy_project/: CMakeLists.txt  Class_hierarchy.cpp  EquilateralTriangle.cpp  EquilateralTriangle.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Triangle.cpp  Triangle.h
2.xx/Game_Race_Simulator/: Game_Race_Simulator.sln
4.xx/02/: program_with_errors.cpp
7.xx/: Запрос_Зинковская.sql
(+224 files in other folders)
